--- a/LabTable.html
+++ b/LabTable.html
@@ -4,14 +4,28 @@
     <meta charset="UTF-8">
 </head>
 <body>
-    <h1>Table Lab</h1>
+    <h1><a href="https://wangfcfthxc-wangfcfthxc.c9users.io/160924/Lab_Table/Lab_Table_OK.html" target="_blank">Table Lab</a></h1>
+    <ul>
+        <li><a href="#wang">王俞鈞</a></li>
+        <li><a href="#ma">馬水母</a></li>
+        <li><a href="#cai">菜英文</a></li>
+    </ul>
+    .<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>
+    .<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>
+    .<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>
+    .<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>
+    .<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>
+    .<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>
+    .<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>
+    .<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>
+    .<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>
     <table border="1" width="70%">
         <caption>段考成績單</caption>
         <tr align="center"><th rowspan="2">姓名</th><th colspan="3">各科成績</th><th rowspan="2">名次</th></tr>
         <tr align="center"><th>國文</th><th>英文</th><th>數學</th></tr>
-        <tr align="center"><td>王俞鈞</td><td>100</td><td>100</td><td>100</td><td>1</td></tr>
-        <tr align="center"><td>馬水母</td><td>70</td><td>60</td><td>50</td><td>3</td></tr>
-        <tr align="center"><td>菜英文</td><td>80</td><td>60</td><td>60</td><td>2</td></tr>
+        <tr align="center"><td><a name="wang" />王俞鈞</td><td>100</td><td>100</td><td>100</td><td>1</td></tr>
+        <tr align="center"><td><a name="ma" />馬水母</td><td>70</td><td>60</td><td>50</td><td>3</td></tr>
+        <tr align="center"><td><a name="cai" />菜英文</td><td>80</td><td>60</td><td>60</td><td>2</td></tr>
     </table>
 
 </body>
